--- a/kb/_posts/2023-08-23-kb0010.md
+++ b/kb/_posts/2023-08-23-kb0010.md
@@ -7,7 +7,7 @@ categories: kb
 
 
 typora-copy-images-to: ../assets/img/${filename}
-typora-root-url: ../
+typora-root-url: ../../
 #**************************************
 
 #*************************************
@@ -73,11 +73,11 @@ Due to the simplicity of setup and lack of infrastructure, most smaller sites wi
 
 Standard security is that you create a group to for the function that you wish to protect, assign your users to the new group and then use the group that you have created to secure the required role /policy
 
-![img](../assets/img/fortigate-ssl-group-menu.png)
+![img](/assets/img/fortigate-ssl-group-menu.png){: .center-image }
 
 To Administer groups from the lefthand navigation menu select **Users & Authentication -> User Groups.** I prefer to create my groups first and then add my users to the group. You can also create the user first and then add them to the group, it’s a personal preference. If you are utilising Radius you need to create a local group and then link it through the UI to the group returned from your authentication/ accounting Field.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_3.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_3.png){: .center-image }
 
 The next step is to give the group a name, this is a free text field, so be descriptive, so that it will help others know its purpose.
 
@@ -91,36 +91,36 @@ As we have not yet created any users leave the Members field empty. As we are no
 
 ## Creating Users On Fortigates
 
-![img](/assets/img/kb0010/fortigate-ssl-group-menu-1.png)
+![img](/assets/img/kb0010/fortigate-ssl-group-menu-1.png){: .center-image }
 
 In this example, we will be utilising local authentication, as it is simpler and not everyone has access to either FSSO or RSSO.
 
 Access to the User/Groups Creation Wizard is located at **User & Authentication -> User Definition** on the left-hand navigation bar 
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_12.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_12.png){: .center-image }
 
 As we are creating a local user select the user type as a local user.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_9.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_9.png){: .center-image }
 
 
 You will next be prompted to enter the username and password for the account that you wish to create. 
 
 Once you have done this click on the Next Button.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_8.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_8.png){: .center-image }
 
 The next screen is where you would configure Two-factor Authentication (2FA).This is outside of the scope of this example.
 
 So just click Next.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_7.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_7.png){: .center-image }
 
 We are now at the Extra Info page. This page allows you to create the user enabled/disabled. It will also allow you to specify User Groups that this user is associated with.
 
 To assign User Groups enable the option if disabled and then click on the + symbol to add User Groups.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_6.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_6.png){: .center-image }
 
 This will open a sidebar on the right-hand side of the screen, from this you can select one or more User Groups.
 
@@ -128,17 +128,17 @@ If you need to remove a User Group, simply click on it a second time.
 
 Once completed selecting groups, click close to return to the wizard.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_5.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_5.png){: .center-image }
 
 You should now see the User Group field showing the users that you have selected.
 
 Click submit to have the Fortigate create the user
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_4-2.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_4-2.png){: .center-image }
 
 You should now see that the user you have created is populated into the local users.
 
-![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_4-2.png)
+![img](/assets/img/kb0010/Fortigate-SSLVPN-Setup_4-2.png){: .center-image }
 
 You should now see that the user you have created is populated into the local users.
 
